--- a/app/assets/javascripts/locales/th-TH.json
+++ b/app/assets/javascripts/locales/th-TH.json
@@ -1,28 +1,28 @@
 {
-  "please_wait": "Please wait...",
+  "please_wait": "กรุณารอสักครู่...",
   "validation_messages": {
-    "accept": "The image file must be either in GIF, JPG or PNG format.",
-    "creditcard": "Please enter a valid credit card number.",
-    "date": "Please enter a valid date.",
-    "dateISO": "Please enter a valid date (ISO).",
-    "digits": "Please enter only digits.",
-    "email": "Please enter a valid email address.",
-    "equalTo": "Please enter the same value again.",
-    "max": "Please enter a value less than or equal to {0}.",
-    "maxlength": "Please enter no more than {0} characters.",
-    "min": "Please enter a value greater than or equal to {0}.",
-    "minlength": "Please enter at least {0} characters.",
-    "number": "Please enter a valid number.",
-    "range": "Please enter a value between {0} and {1}.",
-    "rangelength": "Please enter a value between {0} and {1} characters long.",
-    "remote": "Please fix this field.",
-    "required": "This field is required.",
-    "url": "Please enter a valid URL.",
-    "address_validator": "The location was not found.",
+    "accept": "ไฟล์ภาพจะต้องอยู่ในรูปแบบ GIF JPG หรือ PNG อย่างใดอย่างหนึ่ง",
+    "creditcard": "โปรดป้อนหมายเลขบัตรเครดิตที่สามารถใช้งานได้",
+    "date": "โปรดป้อนวันที่ที่เหมาะสม",
+    "dateISO": "โปรดป้อนวันที่ที่เหมาะสม (ISO)",
+    "digits": "โปรดป้อนเฉพาะตัวเลขเท่านั้น",
+    "email": "โปรดป้อนที่อยู่อีเมล์ที่ใช้งานอยู่",
+    "equalTo": "โปรดป้อนค่าเดิมอีกครั้ง",
+    "max": "โปรดป้อนค่าที่น้อยกว่าหรือเท่ากับ {0}",
+    "maxlength": "โปรดป้อนตามจำนวนโดยต้องไม่มากกว่า {0} อักขระ",
+    "min": "โปรดป้อนค่าที่มากกว่าหรือเท่ากับ {0}",
+    "minlength": "โปรดป้อนตามจำนวนอย่างน้อย {0} ตัวอักษร",
+    "number": "โปรดป้อนตัวเลขที่ถูกต้อง",
+    "range": "โปรดป้อนค่าระหว่าง {0} และ {1}",
+    "rangelength": "โปรดป้อนตัวอักษรโดยให้ความยาวอยู่ระหว่าง {0} และ {1} ตัวอักษร",
+    "remote": "กรุณาแก้ไขข้อมูลนี้",
+    "required": "ข้อมูลนี้จำเป็น",
+    "url": "กรุณากรอกข้อมูล URL",
+    "address_validator": "ไม่พบสถานที่ๆ ระบุไว้",
     "money": "You need to insert a valid monetary value.",
-    "min_bound": "Please enter a value less than max value ({0})",
-    "max_bound": "Please enter a value more than min value ({0})",
-    "number_no_decimals": "Please enter a whole number",
-    "number_decimals": "Please enter a valid number with either dot (.) or comma (,) as a decimal separator"
+    "min_bound": "โปรดป้อนค่าที่น้อยกว่าค่าสูงสุด ({0})",
+    "max_bound": "โปรดป้อนค่าที่มากกว่าค่าต่ำสุด ({0})",
+    "number_no_decimals": "โปรดป้อนตัวเลขทั้งหมด",
+    "number_decimals": "โปรดป้อนตัวเลขที่เหมาะสมพร้อมเครื่องหมายจุด (.) หรือเครื่องหมายจุลภาค (,) ซึ่งคั่นเลขทศนิยมกับจำนวนเต็ม"
   }
 }
