--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -136,8 +136,8 @@ mn:
         invalid_email_domain: ~
         invalid_email_domain_read_more_link: ~
         unknown_error: ~
-        only_white_label_offer: ~
-        upgrade_pro_plan_link: ~
+        white_label_offer: ~
+        upgrade_plan_link: ~
         verification_sent_from: ~
         follow_the_instructions: ~
       getting_started:
@@ -784,6 +784,10 @@ mn:
       you_have_not_yet_accepted_or_rejected_offer: "Та %{date} өдөр ирсэн %{title} саналыг авах эсхүл татгалзаагүй байна."
       you_have_not_yet_accepted_or_rejected_request: "Та %{date} өдөр ирсэн %{title} хүсэлтийг зөвшөөрөх эсхүл татгалзаагүй байна."
       show_thread: ~
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     braintree_account_approved:
       account_ready: ~
       message: ~
@@ -1190,6 +1194,10 @@ mn:
   layouts:
     admin:
       admin: ~
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     no_tribe:
       inbox: Ирсэн
       settings: Тохиргоо
