--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -151,8 +151,8 @@ da-DK:
         invalid_email_domain: "E-mail-adressen '%{email}' bruger en ikke-understøttet udbyder: '%{domain}'. %{invalid_email_domain_read_more_link}"
         invalid_email_domain_read_more_link: "Læs vidensbaseartiklen for yderligere information."
         unknown_error: "Noget gik galt"
-        only_white_label_offer: "Denne funktion er en del af Sharetribe white-label tilbud. For at aktivere denne funktion, skal du %{upgrade_pro_plan_link}"
-        upgrade_pro_plan_link: "opgradere til vores Pro plan eller højere"
+        white_label_offer: ~
+        upgrade_plan_link: ~
         verification_sent_from: "Bekræftelsesmailen blev sendt fra %{verification_sender_name}"
         follow_the_instructions: "Følg instruktionerne i e-mailen for at bekræfte din adresse."
       getting_started:
@@ -811,6 +811,10 @@ da-DK:
       you_have_not_yet_accepted_or_rejected_offer: "Du har endnu ikke accepteret eller afvist tilbuddet %{title} du har modtaget %{date}."
       you_have_not_yet_accepted_or_rejected_request: "Du har endnu ikke accepteret eller afvist anmodningen %{title} du har modtaget %{date}."
       show_thread: "Vis samtalen"
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     braintree_account_approved:
       account_ready: "Du er klar til at modtage betalinger"
       message: "Dine betalingsinformationer er blevet godkendt og du er nu klar til at modtage betalinger på %{service_name}."
@@ -1217,6 +1221,10 @@ da-DK:
   layouts:
     admin:
       admin: "%{service_name} administrator panel"
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     no_tribe:
       inbox: Indbakke
       settings: Indstillinger
