--- a/config/locales/devise.de.yml
+++ b/config/locales/devise.de.yml
@@ -38,14 +38,14 @@ de:
         inactive: inaktiv
         unconfirmed: unbestätigt
         locked: gesperrt
-      update_needs_confirmation: "Du hast Dein Konto erfolgreich aktualisiert, jedoch müssen wir noch Deine neue E-Mail-Adresse verifizieren. Bitte überprüfe Deine E-Mails und klicke auf den Bestätigungs-Link, um Deine neue E-Mail-Adresse zu bestätigen."
+      update_needs_confirmation: "Du hast dein Konto erfolgreich aktualisiert, jedoch müssen wir noch deine neue E-Mail-Adresse verifizieren. Bitte überprüfe deine E-Mails und klicke auf den Bestätigungs-Link, um deine neue E-Mail-Adresse zu bestätigen."
       signed_up: "Herzlich willkommen! Du hast dich erfolgreich registriert."
       updated: "Du hast dein Konto erfolgreich aktualisiert."
       destroyed: "Tschüss! Dein Konto wurde erfolgreich gelöscht. Wir hoffen, dich bald wiederzusehen."
     unlocks:
       send_paranoid_instructions: "Falls dein Konto existiert, erhältst du in wenigen Minuten eine E-Mail mit Anweisungen zum Entsperren deines Kontos."
       send_instructions: "In wenigen Minuten erhältst du eine E-Mail mit Anweisungen zum Entsperren deines Kontos."
-      unlocked: "Dein Konto wurde erfolgreich entsperrt. Bitte melde dich an, um fortzufahren."
+      unlocked: "Dein Konto wurde erfolgreich entsperrt. Bitte melde Dich an, um fortzufahren."
     omniauth_callbacks:
       success: "Erfolgreich von %{kind} Konto autorisiert."
       failure: "Authentifizierung von %{kind} fehlgeschlagen wegen: \"%{reason}\"."
