--- a/config/locales/is.yml
+++ b/config/locales/is.yml
@@ -136,8 +136,8 @@ is:
         invalid_email_domain: ~
         invalid_email_domain_read_more_link: ~
         unknown_error: ~
-        only_white_label_offer: ~
-        upgrade_pro_plan_link: ~
+        white_label_offer: ~
+        upgrade_plan_link: ~
         verification_sent_from: ~
         follow_the_instructions: ~
       getting_started:
@@ -784,6 +784,10 @@ is:
       you_have_not_yet_accepted_or_rejected_offer: "Þú hefur enn ekki samþykkt eða hafnað tilboðinu %{title} sem þú fékkst þann %{date}"
       you_have_not_yet_accepted_or_rejected_request: "Þú hefur enn ekki samþykkt eða hafnað beiðninni %{title} sem þú fékkst þann %{date}"
       show_thread: ~
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     braintree_account_approved:
       account_ready: ~
       message: ~
@@ -1190,6 +1194,10 @@ is:
   layouts:
     admin:
       admin: "%{service_name} Stjórnborð"
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     no_tribe:
       inbox: ~
       settings: ~
