--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -136,8 +136,8 @@ it:
         invalid_email_domain: ~
         invalid_email_domain_read_more_link: ~
         unknown_error: ~
-        only_white_label_offer: ~
-        upgrade_pro_plan_link: ~
+        white_label_offer: ~
+        upgrade_plan_link: ~
         verification_sent_from: ~
         follow_the_instructions: ~
       getting_started:
@@ -788,6 +788,10 @@ it:
       you_have_not_yet_accepted_or_rejected_offer: "Non hai ancora accettato o rifiutato l'offerta %{title} che hai ricevuto il %{date}."
       you_have_not_yet_accepted_or_rejected_request: "Non hai ancora accettato o rifiutato la richiesta '%{title}' che hai ricevuto il %{date}"
       show_thread: "Mostra la conversazione"
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     braintree_account_approved:
       account_ready: "Account abilitato a ricevere pagamenti"
       message: "Le tue informazioni di pagamento sono state confermate e ora sei pronto per ricevere pagamenti su %{service_name}."
@@ -1194,6 +1198,10 @@ it:
   layouts:
     admin:
       admin: "%{service_name} pannello dell'amministratore."
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     no_tribe:
       inbox: Messaggi
       settings: Impostazioni
