--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -136,8 +136,8 @@ el:
         invalid_email_domain: ~
         invalid_email_domain_read_more_link: ~
         unknown_error: ~
-        only_white_label_offer: ~
-        upgrade_pro_plan_link: ~
+        white_label_offer: ~
+        upgrade_plan_link: ~
         verification_sent_from: ~
         follow_the_instructions: ~
       getting_started:
@@ -784,6 +784,10 @@ el:
       you_have_not_yet_accepted_or_rejected_offer: "Δεν έχετε ακόμα αποδεχτεί ή απορρίψει την προσφορά '%{title}' που λάβατε στις %{date}."
       you_have_not_yet_accepted_or_rejected_request: "Δεν έχετε ακόμα αποδεχτεί ή απορρίψει το αίτημα '%{title}' που λάβατε στις %{date}."
       show_thread: "Εμφάνιση συνομιλίας"
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     braintree_account_approved:
       account_ready: "Είστε έτοιμοι να λάβετε πληρωμές"
       message: "Τα στοιχεία πληρωμών σας έχουν επιβεβαιωθεί και πλέον είστε έτοιμοι να λάβετε πληρωμές στο %{service_name}"
@@ -1190,6 +1194,10 @@ el:
   layouts:
     admin:
       admin: "Διαχείριση του %{service_name}"
+    branding:
+      powered_by: ~
+      create_own: ~
+      learn_more: ~
     no_tribe:
       inbox: Εισερχόμενα
       settings: Ρυθμίσεις
