--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -151,8 +151,8 @@ nb:
         invalid_email_domain: "Epostadressen '%{email}' bruker en epostleverandør vi ikke støtter: '%{domain}'. %{invalid_email_domain_read_more_link}"
         invalid_email_domain_read_more_link: "Les mer i denne artikkelen."
         unknown_error: "Noe gikk galt"
-        white_label_offer: ~
-        upgrade_plan_link: ~
+        white_label_offer: "Bruk din egen e-postadresse som avsender og fjern Sharetribes merkenavn fra utgående e-poster ved å %{upgrade_pro_plan_link}."
+        upgrade_plan_link: "oppgraderer til vår Pro-plan eller høyere"
         verification_sent_from: "Bekreftelses-eposten ble sendt fra %{verification_sender_name}."
         follow_the_instructions: "Følg instruksjonen i eposten for å bekrefte din adresse."
       getting_started:
@@ -814,9 +814,9 @@ nb:
       you_have_not_yet_accepted_or_rejected_request: "Du har ennå ikke godtatt eller avslått forespørselen %{title} du mottok %{date}."
       show_thread: "Vis samtale"
     branding:
-      powered_by: ~
-      create_own: ~
-      learn_more: ~
+      powered_by: "%{service_name} er drevet av markedsplass-plattformen %{sharetribe_link}."
+      create_own: "Vil du lage din egen digitale markedsplass, slik som %{service_name}? %{learn_more}."
+      learn_more: "Les mer"
     braintree_account_approved:
       account_ready: "Du kan nå motta betalinger"
       message: "Dine utbetalingsdetaljer er nå bekreftet, og du er nå klar til å motta betalinger på %{service_name}."
@@ -1228,9 +1228,9 @@ nb:
     admin:
       admin: "%{service_name} administrasjonspanel"
     branding:
-      powered_by: ~
-      create_own: ~
-      learn_more: ~
+      powered_by: "%{service_name} er drevet av markedsplass-plattformen %{sharetribe_link}."
+      create_own: "Vil du lage din egen digitale markedsplass, slik som %{service_name}? %{learn_more}."
+      learn_more: "Les mer"
     no_tribe:
       inbox: Innboks
       settings: Innstillinger
